@@ -1,3 +1,8 @@
+Fri Feb  2 18:27:36 UTC 2007 Andrew J. Schorr <ajschorr@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 52.
+	Arnold added the fmtspcl test to gawk-stable.
+
 Fri Feb  2 18:19:20 UTC 2007 Andrew J. Schorr <ajschorr@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 51.
